Name:           jobqueue-all
Version:        0.1.6
Synopsis:       A job queue library
License:        MIT
License-File:   LICENSE
Author:         Kiyoshi Ikehara
Maintainer:     kiyoshi.ikehara at gree.net
Stability:      experimental
Copyright:      GREE, Inc.
Build-Type:     Simple
Category:       Network, Client
Cabal-Version:  >=1.8
Homepage:       https://github.com/gree/haskell-jobqueue
Description:
  Haskell JobQueue is a library used for building a job scheduler with priority queues.
  The state of jobs is stored in a backend database such as Apache Zookeeper or other 
  highly reliable message queue systems.

Source-Repository head
  type:     git
  location: https://github.com/gree/haskell-jobqueue.git

Library
  Ghc-Options:     -Wall
  Build-Depends:   base                     >= 4 && < 5
                 , jobqueue                 >= 0.1.6
                 , jobqueue-zookeeper       >= 0.0.1
                 , jobqueue-sqlite          >= 0.0.1
                 , mtl                      > 2.2
                 , network                  >= 2.3.2
                 , hslogger
                 , text
                 , bytestring
                 , containers
                 , split
                 , time
                 , data-default
                 , stm                      >= 2.4
                 , hzk                      >= 2.0.0
                 , attoparsec
                 , data-default
                 , fast-logger
                 , monad-logger
                 , template-haskell
                 , text-format
                 , monad-control
                 , transformers-base
                 , lifted-base
                 , regex-posix
                 , aeson
  Hs-source-dirs:  src
  Exposed-modules: Network.JobQueue
                 , Network.JobQueue.Backend
                 , Network.JobQueue.JobQueue
                 , Network.JobQueue.JobQueue.Internal
                 , Network.JobQueue.Util
  Extensions:      DeriveDataTypeable

Test-Suite test
  Ghc-Options:     -threaded -O2
  Build-depends:   base
                 , bytestring
                 , network >= 2.3.2
                 , directory
                 , QuickCheck < 3
                 , hspec
                 , async
                 , jobqueue
                 , jobqueue-all
                 , data-default
                 , stm
  Type:            exitcode-stdio-1.0
  Hs-source-dirs:  test
  Other-modules:   Action
                 , BackendQueue
                 , JobQueue
  Main-is:         Main.hs

