Name:           jobqueue-sqlite
Version:        0.0.1
Synopsis:       A job queue library
License:        MIT
License-File:   LICENSE
Author:         Kiyoshi Ikehara
Maintainer:     kiyoshi.ikehara at gree.net
Stability:      experimental
Copyright:      GREE, Inc.
Build-Type:     Simple
Category:       Network, Client
Cabal-Version:  >=1.8
Homepage:       https://github.com/gree/haskell-jobqueue
Description:
  Haskell JobQueue is a library used for building a job scheduler with priority queues.
  The state of jobs is stored in a backend database such as Apache Zookeeper or other 
  highly reliable message queue systems.

Source-Repository head
  type:     git
  location: https://github.com/gree/haskell-jobqueue.git

Library
  Ghc-Options:     -Wall
  Build-Depends:   base                     >= 4 && < 5
                 , jobqueue                 >= 0.1.6
                 , stm
                 , bytestring
                 , split
                 , HDBC
                 , HDBC-sqlite3
  Hs-source-dirs:  src
  Exposed-modules: Network.JobQueue.Backend.Sqlite3
  Extensions:      DeriveDataTypeable
